Fixing scroll block in mobile menu drawer, keeping cookie icon z-index 2, removing margin-right from final product in menu drawer scroll

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -829,6 +829,7 @@ video {
 ._prose ul li::before {
   content: "+";
   top: -0.06rem;
+  font-weight: 600;
   position: absolute;
   left: 0px;
   height: 1.5rem;
@@ -1029,6 +1030,7 @@ video {
 .shopify-policy__body .rte ul li::before {
   content: "+";
   top: -0.06rem;
+  font-weight: 600;
   position: absolute;
   left: 0px;
   height: 1.5rem;
